Dynamic-access coverage for org.apache.jasper.runtime.ProtectedFunctionMapper$2 (23/45)