@@ -12,10 +12,31 @@ String libraryVersion = tck.testedLibraryVersion.get()
 
 dependencies {
     testImplementation "tomcat:jasper-runtime:$libraryVersion"
+    testImplementation 'javax.servlet:jsp-api:2.0'
     testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
+tasks.named("test") {
+    systemProperty "package.definition", "true"
+    if ((JavaVersion.current().majorVersion as int) < 24) {
+        jvmArgs += ["-Djava.security.manager=allow"]
+    }
+}
+
+tasks.named("nativeTest") {
+    runtimeArgs.add("-Dpackage.definition=true")
+    if ((JavaVersion.current().majorVersion as int) < 24) {
+        runtimeArgs.add("-Djava.security.manager=allow")
+    }
+}
+
 graalvmNative {
+    binaries {
+        test {
+            buildArgs.add("-Dpackage.definition=true")
+        }
+    }
+
     agent {
         defaultMode = "conditional"
         modes {
